--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "mongoose": "^5.8.12"
   },
   "devDependencies": {
