--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "mongoose": "^5.8.12"
